<resources>
    <string name="app_name">Vrund</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kalash_magenta">kalash magenta</string>
    <string name="kalash_yellow">kalash yellow</string>
    <string name="kalash_blue">kalash blue</string>
    <string name="image_for_displaying_info">Image for displaying info</string>
    <string name="home_title_string">VRUND \'17\nThe Annual Garba Festival</string>
    <string name="home_about_one_string">A celebration is an occurrence which is a fusion of happiness, traditions, colors, devotion, and respect for our culture. While talking about celebrations we certainly can’t forget the most happening yet anticipated festival of our very own state Gujarat which is NAVRATRI. We had always believed in celebrating the brightest of emotions of every individual, so now when the CHARUSAT family are concerned how can we forget to celebrate theirs.</string>
    <string name="home_about_two_string">Once again this year CHARUSAT Central Council brings back the grooves and perception of happiness to the university with the high end celebration of our most awaited event of the year.</string>
    <string name="home_about_three_string">Vrund 17 is going to be a more memorable day in your life so why you are waiting for lock your dates on the calendar with 6 October and enjoy the celebration with joy…</string>
    <string name="home_about_four_string">Be a part of Vrund and make it memorable for your life. You’ll find various kinds of garba steps during the celebration played by your friends. Traditional dressing is required for playing the garba as participant.</string>
    <string name="home_about_five_string">Central Council heartily invites you to the annual garba festival of CHARUSAT. Don’t forget to register yourself for your presence. College ID Card is mandatory for the entry.</string>
    <string name="home_about_six_string">Having dinner together as a family will be our pleasure. Don’t forget to carry your college ID card during the refreshment.</string>
    <string name="home_about_seven_string">Prizes and Awards will be awarded to best performance and best dressing participant. But before that don’t forget to register yourself.</string>
    <string name="instruction"><b>Instruction : \n</b>
        <ol>
        <li>Traditional Dress Code is compulsory.\n</li>
        <li>Bring ID Card for security Verification.\n</li>
        <li>Only Registered Students will be allowed to enter garba ground.\n</li> 
        <li>No type of nuisance will be entertained and Strict actions will be taken against the rule breakers.\n</li>
        </ol>
	</string>

    <string name="app_member_harsh_shah">Harsh Shah, IT Dept.</string>
    <string name="app_member_yash_sheth">Yash Sheth, IT Dept.</string>
    <string name="app_member_umang_patel">Umang Patel, IT Dept.</string>
    <string name="app_member_yash_sodha">Yash Sodha, CE Dept.</string>
    <string name="app_member_mit_patel">Mit Patel, CE Dept.</string>

</resources>
