<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="#ded5e8">

    <android.support.v7.widget.CardView
        android:id="@+id/home_text_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:id="@+id/home_text_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/home_text_card_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:breakStrategy="simple"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:targetApi="m"
                tools:text="Sample text for displaying something" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_image_card"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        tools:visibility="gone">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home_image_card_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_for_displaying_info"
                android:scaleType="fitXY"
                tools:src="@drawable/placeholder_image_loading" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_app_team_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFF"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:visibility="gone"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@drawable/dscappteam1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8FC7F6"
                android:orientation="horizontal"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/app_yash_sheth"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/app_member_yash_sheth"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#42A5F4"
                android:orientation="horizontal"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/app_harsh_shah"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/app_member_harsh_shah"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1E88E4"
                android:orientation="horizontal"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/app_umang_patel"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/app_member_umang_patel"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1565BF"
                android:orientation="horizontal"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/app_yash_sodha"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/app_member_yash_sodha"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0D47A1"
                android:orientation="horizontal"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/app_mitkumar_patel"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/app_member_mit_patel"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/kalash_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom|end"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/kalash_blue"
            android:src="@drawable/k1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/kalash_yellow"
            android:src="@drawable/k2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/kalash_magenta"
            android:src="@drawable/k4" />

    </LinearLayout>


</LinearLayout>

